tests/base/invalid/Constant_Invalid_2.whiley
import * from whiley.lang.*

// remember, for this to fail we need the Constants.whiley file as
// well.
void ::main(System.Console sys):
	a = Constants[5]
